/**
 * proto definitions for auto-generated client, server, and messages to pass using grpc.
 *
 * if you make any changes to this file, run
 *   `rake proto`
 * to regenerate the ruby code.
 **/

syntax = "proto3";

package fastlane_c_i;

service Agent {
  rpc Spawn(Command) returns (stream Log) {}
  rpc SendFile(FileRequest) returns (FileResponse) {}
}

message Log {
  // the text contents of the log line.
  string message = 1;

  // the log level that was used to output this log line. Null if none given.
  enum Level {
    DEBUG = 0;
    INFO = 1;
    WARN = 2;
    ERROR = 3;
    FATAL = 5;
  }
  Level level = 2;

  // the exit status of the Command. The last `Log` of a stream should contain only a `status` field.
  int32 status = 3;
}

// A command to be spawned on by the server.
message Command {
  // the executable name, possibly including absolute path.
  string bin = 1;

  // and command line parameters to be passed to the bin
  repeated string parameters = 2;

  // a map of the environment to be given to the child process.
  map<string,string> env = 3;

  // TODO: some kind of ID for a given run to be used
}

// Represents the parameters 
message FileRequest {
  // TODO: some kind of ID for a given run
}

message FileResponse {
  string fileName = 1;

  bytes artifactData = 2;
}
